Unify account session APIs
